--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     </filter>
     <filter-mapping>
         <filter-name>WicketApplication</filter-name>
-        <url-pattern>/wicket/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
     <session-config>
         <session-timeout>
