--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
     <name>kurzuscsere</name>
 
     <properties>
-        <wicket.version>1.4.19</wicket.version>
+        <wicket.version>1.4.20</wicket.version>
+        <logback.version>1.0.6</logback.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
@@ -41,12 +42,12 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>0.9.30</version>
+            <version>${logback.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>0.9.30</version>
+            <version>${logback.version}</version>
         </dependency>
 
 
@@ -90,7 +91,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.1.1</version>
+                <version>2.2</version>
                 <configuration>
                     <warSourceDirectory>${project.basedir}/web</warSourceDirectory>
                 </configuration>
