--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <name>kurzuscsere</name>
 
     <properties>
-        <wicket.version>1.4.21</wicket.version>
+        <wicket.version>1.5.8</wicket.version>
         <logback.version>1.0.6</logback.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -19,7 +19,7 @@
         <!--  WICKET DEPENDENCIES -->
         <dependency>
             <groupId>org.apache.wicket</groupId>
-            <artifactId>wicket</artifactId>
+            <artifactId>wicket-core</artifactId>
             <version>${wicket.version}</version>
         </dependency>
         <dependency>
